# gnome-internet-radio-locator

./: .gitignore  AMFM  AUTHORS  BROADCAST  ChangeLog  DEBIAN  EFF  FEDORA  GEOLOCATION  GNU  GTK4  HACKING  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  UBUNTU  autogen.sh  configure  configure.ac  gnome-internet-radio-locator.doap  gnome-internet-radio-locator.spec.in  meson.build
data/: Makefile.am  Makefile.in  gnome-internet-radio-locator.appdata.xml.in  gnome-internet-radio-locator.desktop.in  gnome-internet-radio-locator.desktop.in.in  org.gnome.Radio.gschema.xml  org.gnome.Radio.gschema.xml.in  org.gnome.gnome-internet-radio-locator.gschema.xml  org.gnome.gnome-internet-radio-locator.gschema.xml.in
data/icons/: Makefile.am  Makefile.in
data/icons/1024x1024/: Makefile.am  Makefile.in
data/icons/16x16/: Makefile.am  Makefile.in
data/icons/22x22/: Makefile.am  Makefile.in
data/icons/24x24/: Makefile.am  Makefile.in
data/icons/256x256/: Makefile.am  Makefile.in
data/icons/32x32/: Makefile.am  Makefile.in
data/icons/48x48/: Makefile.am  Makefile.in
data/icons/512x512/: Makefile.am  Makefile.in
doc/: AAMOT.txt.xz  Aamot-2020.txt.xz  Makefile.am
gtk/: Makefile.am  org.gnome.Radio.c  org.gnome.Radio.dtd  org.gnome.Radio.xml
help/: Makefile.am  Makefile.in
help/C/: exit.page  index.page  intro.page  legal.xml  new.page  search.page  stop.page  zoom.page
help/cs/: cs.po
help/da/: da.po
help/de/: de.po
help/es/: es.po
help/pl/: pl.po
help/sv/: sv.po
help/uk/: uk.po
m4/: ChangeLog
man/: Makefile.am  Makefile.in  gnome-internet-radio-locator.1
po/: LINGUAS  POTFILES.in  POTFILES.skip  ca.po  cs.po  da.po  de.po  el.po  es.po  eu.po  fr.po  fur.po  hi.po  hr.po  hu.po  id.po  is.po  ka.po  meson.build  nb.po  nl.po  oc.po  pl.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sv.po  tr.po  uk.po  zh_CN.po
src/: Makefile.am  Makefile.in  gnome-internet-radio-locator-0.1.dtd  gnome-internet-radio-locator-5.0.dtd  gnome-internet-radio-locator-gui.c  gnome-internet-radio-locator-gui.h  gnome-internet-radio-locator-keys.h  gnome-internet-radio-locator-listener.h  gnome-internet-radio-locator-location.c  gnome-internet-radio-locator-location.h  gnome-internet-radio-locator-markers.c  gnome-internet-radio-locator-markers.h  gnome-internet-radio-locator-player-resource.h  gnome-internet-radio-locator-player.c  gnome-internet-radio-locator-player.h  gnome-internet-radio-locator-program.h  gnome-internet-radio-locator-radius.c  gnome-internet-radio-locator-radius.h  gnome-internet-radio-locator-runners.h  gnome-internet-radio-locator-station.c  gnome-internet-radio-locator-station.h  gnome-internet-radio-locator-stations-map.h  gnome-internet-radio-locator-streams.h  gnome-internet-radio-locator-tz.c  gnome-internet-radio-locator-tz.h  gnome-internet-radio-locator.c  gnome-internet-radio-locator.gresource.xml  gnome-internet-radio-locator.h  gnome-internet-radio-locator.xml  gnome-internet-radio-locator.xsl  meson.build
talk/: GC2019.tex  GUADEC2017.tex  GUADEC2019.tex  GUADEC2020.tex  GUADEC2021.tex
