@YELP_HELP_RULES@
HELP_ID = gnome-internet-radio-locator
#HELP_FILES = aboutprogram.page aboutstation.page exit.page index.page intro.page legal.xml listen.page new.page next.page prev.page record.page search.page stations.page
#HELP_MEDIA = media/gnome-internet-radio-locator-aboutprogram.png media/gnome-internet-radio-locator-aboutstation.png media/gnome-internet-radio-locator-exit.png media/gnome-internet-radio-locator-listen.png media/gnome-internet-radio-locator-main.png media/gnome-internet-radio-locator-new.png media/gnome-internet-radio-locator-newstation.png media/gnome-internet-radio-locator-next-station.png media/gnome-internet-radio-locator-prev-station.png media/gnome-internet-radio-locator-prev-station.png media/gnome-internet-radio-locator-record.png media/gnome-internet-radio-locator-search-station-by-location.png media/gnome-internet-radio-locator-select-station.png media/gnome-internet-radio-locator-stations.png media/gnome-internet-radio-locator-stop.png
#HELP_LINGUAS = cs de es en_US sv
-include $(top_srcdir)/git.mk
