if ENABLE_USER_HELP

@YELP_HELP_RULES@

HELP_ID = gnome-internet-radio-locator

HELP_MEDIA = \
	media/gnome-internet-radio-locator-exit.png \
	media/gnome-internet-radio-locator-new.png \
	media/gnome-internet-radio-locator-search.png \
	media/gnome-internet-radio-locator-stop.png \
	media/gnome-internet-radio-locator-zoom.png

HELP_FILES = \
	index.page \
	intro.page \
	new.page \
	stop.page \
	zoom.page \
	search.page \
	exit.page

HELP_LINGUAS = da cs de es pl sv uk

endif

-include $(top_srcdir)/git.mk
